--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "version": "1.1.0",
   "scripts": {
     "develop": "rm -rf .cache && gatsby develop",
-    "build": "pushd .. && npm install && popd && cross-env NODE_ENV=production gatsby build --prefix-paths && npm run build:storybook",
+    "build": "bash -c 'pushd .. && npm install && popd && cross-env NODE_ENV=production gatsby build --prefix-paths && npm run build:storybook'",
     "build:storybook": "cd .. && ./scripts/build-storybook"
   },
   "engines": {
