--- a/docs/package.json
+++ b/docs/package.json
@@ -12,15 +12,16 @@
   },
   "dependencies": {
     "@primer/gatsby-theme-doctocat": "^3.2.1",
+    "@primer/octicons-react": "^17.0.0",
     "@primer/primitives": "4.1.0",
+    "@primer/react": "^35.1.0",
     "gatsby": "^3.7.2",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-postcss": "^4.14.0",
+    "gatsby-plugin-typescript": "^2.12.1",
     "react": "^17.0.2",
     "react-docgen-typescript": "^2.0.0",
-    "react-dom": "^17.0.2",
-    "@primer/octicons-react": "^17.0.0",
-    "@primer/react": "^35.1.0"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "css-to-string-loader": "^0.1.3",
