--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "version": "1.1.0",
   "scripts": {
     "develop": "rm -rf .cache && gatsby develop",
-    "build": "cross-env NODE_ENV=production gatsby build"
+    "build": "cross-env NODE_ENV=production gatsby build --prefix-paths"
   },
   "engines": {
     "node": ">=16",
