--- a/.github/workflows/deploy_docs_preview.yml
+++ b/.github/workflows/deploy_docs_preview.yml
@@ -14,5 +14,5 @@ jobs:
     uses: primer/.github/.github/workflows/deploy_preview.yml@main
     with:
       node_version: 16
-      build: npm run build && npm run build:docs
+      build: npm run build && npm run build:docs:preview
       output_dir: docs/public/
