--- a/.github/workflows/deploy_docs_preview.yml
+++ b/.github/workflows/deploy_docs_preview.yml
@@ -1,4 +1,4 @@
-name: Deploy docs preview to Pages
+name: Deploy preview
 
 on:
   pull_request:
@@ -9,54 +9,10 @@ permissions:
   id-token: write
 
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout PR
-        uses: actions/checkout@v2
-
-      - name: Set up Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build library
-        run: npm run build
-
-      - name: Build docs
-        run: npm run build:docs
-
-      - name: Archive build output
-        run: 'tar --dereference --directory docs/public -cvf artifact.tar .'
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@main
-        with:
-          name: github-pages
-          path: artifact.tar
-
   deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: paper-spa/deploy-pages@main
-        with:
-          preview: true
+    name: Build and deploy
+    uses: primer/.github/.github/workflows/deploy_preview.yml@main
+    with:
+      node_version: 16
+      build: npm run build && npm run build:docs:preview
+      output_dir: docs/public/
