--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "engines": {
     "npm": ">=8.0.0",
-    "node": ">=14.0.0"
+    "node": ">=16.0.0"
   },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -21,13 +21,14 @@
     "lib"
   ],
   "scripts": {
-    "build": "npm run clean && npm run build:css-types && npm run build:css-vars && webpack",
+    "build": "npm run clean && npm run build:css-types && npm run build:tokens && webpack",
+    "build:css-types": "tcm -p 'src/**/*.css' .",
     "build:css-vars": "ts-node --skipIgnore ./scripts/build-css-variables.ts",
     "build:types": "tsc --project tsconfig.build.json",
     "build:storybook": "scripts/build-storybook",
     "build:docs": "scripts/build-docs",
     "build:docs:preview": "scripts/build-docs preview",
-    "build:css-types": "tcm -p 'src/**/*.css' .",
+    "build:tokens": "node scripts/build-tokens.js && npm run build:css-vars",
     "check": "tsc --noEmit",
     "clean": "rm -rf lib",
     "format": "prettier --check '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
@@ -52,7 +53,7 @@
     "@changesets/cli": "^2.21.0",
     "@github/prettier-config": "^0.0.4",
     "@primer/octicons-react": "^17.0.0",
-    "@primer/primitives": "^7.5.1",
+    "@primer/primitives": "^7.8.2",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-interactions": "^6.4.19",
@@ -73,16 +74,17 @@
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "autoprefixer": "^9.8.8",
-    "css-loader": "^5.2.7",
     "cross-env": "7.0.2",
+    "css-loader": "^5.2.7",
     "eslint": "^8.12.0",
+    "eslint-import-resolver-typescript": "^2.7.0",
     "eslint-plugin-github": "^4.3.6",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-mdx": "^1.17.0",
     "eslint-plugin-primer-react": "^0.7.4",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
-    "eslint-import-resolver-typescript": "^2.7.0",
+    "fast-glob": "^3.2.11",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "jest-axe": "^6.0.0",
@@ -94,6 +96,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "storybook-css-modules-preset": "^1.1.1",
+    "style-dictionary": "^3.7.0",
     "style-loader": "^3.3.1",
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.7",
