--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -5,3 +5,10 @@
   children:
     - title: Hero
       url: /components/Hero
+
+- title: Base Components
+  children:
+    - title: Heading
+      url: /components/Heading
+    - title: Text
+      url: /components/Text
